--- a/tests/KristofferStrube.ActivityStreams.Tests/KristofferStrube.ActivityStreams.Tests.csproj
+++ b/tests/KristofferStrube.ActivityStreams.Tests/KristofferStrube.ActivityStreams.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
+    <PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
