--- a/src/KristofferStrube.ActivityStreams/KristofferStrube.ActivityStreams.csproj
+++ b/src/KristofferStrube.ActivityStreams/KristofferStrube.ActivityStreams.csproj
@@ -1,9 +1,31 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Title>ActivityStreams</Title>
+    <Description>A .NET implementation of the ActivityStreams+ActivityPub vocabulary in the form of classes that can be serialized using System.Text.Json</Description>
+    <PackageId>KristofferStrube.ActivityStreams</PackageId>
+    <PackageTags>serialization;json;activitystreams;activitystreams-vocabulary;systemtextjson;acitivitypub</PackageTags>
+    <RepositoryUrl>https://github.com/KristofferStrube/ActivityStreams</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageVersion>0.1.0-alpha.0</PackageVersion>
+    <Authors>Kristoffer Strube</Authors>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\docs\icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
