--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,7 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish Nuget to GitHub registry
+      run: dotnet nuget push ./KristofferStrube.ActivityStreams/out/*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/aluitink/index.json --skip-duplicate --no-symbols 
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
