--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,15 +22,17 @@ jobs:
         dotnet-version: |
           6.0.x
           7.0.x
+          source-url: https://nuget.pkg.github.com/aluitink/index.json
+      env:
+        GITHUB_TOKEN: ${{ secrets.PACKAGE_PUBLISH_TOKEN }}
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build Debug
-      run: dotnet build --no-restore --configuration Debug
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
     - name: Build Release
       run: dotnet build --no-restore --configuration Release
-    - name: Publish Nuget to GitHub registry
-      run: dotnet nuget push ./src/KristofferStrube.ActivityStreams/bin/Release/*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/aluitink/index.json --skip-duplicate --no-symbols 
-    env:
-      GITHUB_TOKEN: ${{ secrets.PACKAGE_PUBLISH_TOKEN }}
+    - name: Test Release
+      run: dotnet test --no-build --verbosity normal --configuration Release
+    - name: Pack Release
+      run: dotnet pack --no-build --configuration Release
+    - name: Publish Release to GitHub registry
+      run: dotnet nuget push ./**/*.nupkg -k ${GITHUB_TOKEN} -s https://nuget.pkg.github.com/aluitink/index.json --skip-duplicate --no-symbols 
+    
