What's that song from those flashy helmet guys..

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,14 +24,11 @@ jobs:
           7.0.x
       env:
         GITHUB_TOKEN: ${{ secrets.PACKAGE_PUBLISH_TOKEN }}
-    - name: Restore dependencies
-      run: dotnet restore
+
     - name: Build net6.0
-      run: dotnet build --no-restore --configuration Release --framework net6.0
+      run: dotnet build --configuration Release --framework net6.0
     - name: Build net7.0
-      run: dotnet build --no-restore --configuration Release --framework net7.0
-    - name: Test Release 6.0
-      run: dotnet test --no-build --verbosity normal --configuration Release --framework net6.0
+      run: dotnet build --configuration Release --framework net7.0
     - name: Test Release
       run: dotnet test --no-build --verbosity normal --configuration Release
     - name: Pack Release
