Added default context and types.

--- a/src/KristofferStrube.ActivityStreams/KristofferStrube.ActivityStreams.csproj
+++ b/src/KristofferStrube.ActivityStreams/KristofferStrube.ActivityStreams.csproj
@@ -15,6 +15,7 @@
     <Authors>Kristoffer Strube</Authors>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageIcon>icon.png</PackageIcon>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
